# FourierSmoothing

./: README.md  artifact_upload_check_marker.txt  ci_hosted_trigger.txt  ci_pytest_diagnostic_trigger.txt  ci_trigger.txt  final_pairwise_em_check_marker.txt  hosted_check_marker.txt  hosted_final_check_marker.txt  paper_artifact_pipeline_check_marker.txt  pyproject.toml
.github/workflows/: paper-artifacts.yml  paper-benchmark.yml  pytest-diagnostic.yml  tests.yml
scripts/: plot_paper_results.py  plot_smoothing_hero.py  run_figf_pwc_experiment.py  run_identity_torus_experiment.py  run_paper_artifact_pipeline.py  run_particle_baseline_experiment.py  run_smoothing_error_reduction.py  run_smoothing_evaluation.py  run_truncation_negativity_diagnostic.py  write_latex_tables.py
src/fourier_smoothing/: __init__.py  em.py  experiments.py  general_transition.py  pairwise.py  particle.py  particle_experiments.py  smoother.py  tables.py
tests/: test_em.py  test_experiments.py  test_general_transition.py  test_general_transition_multidimensional.py  test_general_transition_smoother.py  test_pairwise.py  test_particle.py  test_particle_experiments.py  test_plot_scripts.py  test_smoother.py  test_tables.py
