[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-smoothing"
version = "0.1.0"
description = "Reference implementation of Fourier/grid backward-information smoothers on hypertori"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Florian Pfaff" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
